--- a/app/src/main/res/layout/fragment_movie_grid_item.xml
+++ b/app/src/main/res/layout/fragment_movie_grid_item.xml
@@ -4,5 +4,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/gridview_item_imageview"
-    android:contentDescription="cat-image" />
+    android:id="@+id/gridview_item_imageview" />
