--- a/app/src/main/res/layout/fragment_movie_grid_item.xml
+++ b/app/src/main/res/layout/fragment_movie_grid_item.xml
@@ -2,6 +2,8 @@
 
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
+    android:scaleType="fitCenter"
     android:id="@+id/gridview_item_imageview" />
