--- a/app/src/main/res/layout-land/fragment_movie_detail.xml
+++ b/app/src/main/res/layout-land/fragment_movie_detail.xml
@@ -34,13 +34,14 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                 android:background="#5CAB7D"
                 android:textColor="#FFFFFF"
-                android:padding="20sp" />
+                android:paddingLeft="20sp"
+                android:paddingRight="20sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="242dp"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="3">
 
                 <ImageView
                     android:layout_height="fill_parent"
@@ -51,17 +52,14 @@
                     android:scaleType="fitStart"
                     android:layout_width="0dp"
                     android:cropToPadding="false"
-                    android:paddingLeft="20sp"
-                    android:paddingTop="20sp"
-                    android:paddingRight="20sp" />
+                    android:padding="20sp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:paddingTop="20dp"
-                    android:paddingLeft="20dp">
+                    android:layout_weight="2"
+                    android:padding="20dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -79,19 +77,18 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                         android:textStyle="italic"/>
 
+                    <TextView
+                        android:text="@string/movie_overview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/overview"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20sp"/>
+
                 </LinearLayout>
             </LinearLayout>
 
-            <TextView
-                android:text="@string/movie_overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/overview"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textSize="16sp"
-                android:paddingLeft="20sp"
-                android:paddingRight="20sp"
-                android:paddingBottom="20sp"/>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
